# opengl-tutorial

./: .clang-format  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  conanfile.py
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
source/: game.cpp  game.hpp  main.cpp
source/glad/include/glad/: glad.hpp
source/glad/src/: glad.cpp
test/: CMakeLists.txt
test/source/: opengl-tutorial_test.cpp
